bk_ida/gobmkida/c3/dfa_shuffle
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_shuffle/src/patterns/dfa.c:1534:12: error: expected expression
*( _OWORD *)&v27[v29] = *( _OWORD *)&next[v29 / 4]; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_shuffle/src/patterns/dfa.c:1534:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v27[v29] = *( _OWORD *)&next[v29 / 4]; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_shuffle/src/patterns/dfa.c:1534:36: error: expected expression
*( _OWORD *)&v27[v29] = *( _OWORD *)&next[v29 / 4]; 
                                   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_shuffle/src/patterns/dfa.c:1534:28: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v27[v29] = *( _OWORD *)&next[v29 / 4]; 
                           ^
4 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_shuffle/src/obj/3/dfa.o] Error 1
